--- a/01_model_building_and_Training.ipynb
+++ b/01_model_building_and_Training.ipynb
@@ -444,27 +444,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 242,
    "id": "83b56202-3be0-44dd-865f-f7675f174254",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# CAN BOOST our CNN model by using such techniques:\n",
+    "datagen = ImageDataGenerator(\n",
+    "    rotation_range=45,\n",
+    "    width_shift_range=0.2,\n",
+    "    height_shift_range=0.2,\n",
+    "    horizontal_flip=True,\n",
+    "    vertical_flip=True,\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 243,
+   "id": "e09bca55-cec8-4f48-b664-602664058e49",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fitting Our Image dataset (X_train here to datagen)\n",
+    "datagen.fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
    "id": "94b9d41a-0b0c-45a7-9a45-c6a2a2cca01e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Generating Augmented Images and labels,\n",
+    "train_data_wImanip= datagen.flow(X_train, y_train)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf17fda4-72be-4301-98a5-a50844d05d7d",
+   "execution_count": 257,
+   "id": "e3935a87-fd1c-47cf-9439-1ac5937bf7e7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<keras.preprocessing.image.NumpyArrayIterator at 0x171fc0e3070>"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data_wImanip"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "023f0220-cd85-43df-8440-127499a56414",
+   "metadata": {},
+   "source": [
+    "- **So, here we successfully generated train data from existing data. Thus we can perform IMAGE MANIPULATION and use this train data to Train our CNN model, which can improve its performance.**\n",
+    "> **NOTE:** Here, we will directly feed our dataset to model. but I have added snippets for both the models' checkpoint you can use any of the datasets"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -610,14 +655,6 @@
     "# checkpoints for Test 02 (With Image Manipulation {data augmentation applied})\n",
     "checkpoint_wImanip = ModelCheckpoint('model_chckpnt_wImanip.h5', monitor='val_loss', save_best_only=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5714ec1-c4ac-46e3-a7a7-799511800931",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -858,7 +895,7 @@
    "id": "f39df094-be48-4cd1-ad97-a6664faaea91",
    "metadata": {},
    "source": [
-    "--- end of notebook ---"
+    "--- end of notebook : PREDICTION & TESTING On other notebook [02_model_Testing.ipynb]('https://github.com/ghelanikirtan/Greyfeathers-task/blob/main/02_model_Testing.ipynb') ---"
    ]
   }
  ],
