added model training & model testing notebook files

--- a/01_model_building_and_Training.ipynb
+++ b/01_model_building_and_Training.ipynb
@@ -895,7 +895,7 @@
    "id": "f39df094-be48-4cd1-ad97-a6664faaea91",
    "metadata": {},
    "source": [
-    "--- end of notebook : PREDICTION & TESTING On other notebook [02_model_Testing.ipynb]('https://github.com/ghelanikirtan/Greyfeathers-task/blob/main/02_model_Testing.ipynb') ---"
+    "--- end of notebook : PREDICTION & TESTING On other notebook [02_model_Testing]('https://github.com/ghelanikirtan/Greyfeathers-task/blob/main/02_model_Testing.ipynb') ---"
    ]
   }
  ],
