added model training & model testing notebook files

--- a/01_model_building_and_Training.ipynb
+++ b/01_model_building_and_Training.ipynb
@@ -98,14 +98,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f3d3c2a7-c65e-49d9-a612-ceba6014e027",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "1afb4ec4-0ab0-46e6-9c29-f9e9233f7e58",
    "metadata": {},
@@ -377,14 +369,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3274415-d1e6-44d5-9d7a-4a5a9b31c3d0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "ddf418d4-6885-43d4-84b1-1c3a1a0d607a",
    "metadata": {},
@@ -607,14 +591,6 @@
     "# I will choose loss as sparse categorical crossentropy as there are two classes (0 & 1) - one hot encoded + both are mutually exclusive\n",
     "model.compile(optimizer='adam', loss='sparse_categorical_crossentropy', metrics=['accuracy'])"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1fce5c64-a482-465a-aa73-369c648c5807",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -895,7 +871,7 @@
    "id": "f39df094-be48-4cd1-ad97-a6664faaea91",
    "metadata": {},
    "source": [
-    "--- end of notebook : PREDICTION & TESTING On other notebook [02_model_Testing]('https://github.com/ghelanikirtan/Greyfeathers-task/blob/main/02_model_Testing.ipynb') ---"
+    "--- end of notebook : PREDICTION & TESTING On other notebook *`02_model_Testing.ipynb`* ---"
    ]
   }
  ],
