added model training & model testing notebook files

--- a/01_model_building_and_Training.ipynb
+++ b/01_model_building_and_Training.ipynb
@@ -9,8 +9,9 @@
     "\n",
     "1) Creating Model\n",
     "2) Image Manipulation\n",
-    "3) Improving Model. (use CAM)\n",
-    "4) Good explainability\n",
+    "3) Creating Images for testing.\n",
+    "4) Improving Model. (use CAM)\n",
+    "5) Good explainability\n",
     "\n",
     "---"
    ]
@@ -445,13 +446,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 258,
    "id": "e09bca55-cec8-4f48-b664-602664058e49",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Fitting Our Image dataset (X_train here to datagen)\n",
     "datagen.fit(X_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "527374af-6b2c-40db-a390-5643fd89c445",
+   "metadata": {},
+   "source": [
+    "### Creating more images for testing"
    ]
   },
   {
